@@ -124,21 +124,24 @@ ENDIF(TEST_SUITE_FILES)
 SET(IT_TEST_ENC 0)
 SET(IT_TEST_DEC 0)
 FOREACH(OPJ_TEST_CMD_LINE ${OPJ_TEST_CMD_LINE_LIST})
-  
+
   SET(IGNORE_LINE_FOUND 0)
 
   # Replace space by ; to generate a list
   STRING(REPLACE " " ";" CMD_ARG_LIST ${OPJ_TEST_CMD_LINE})
-  
+
   # Check if the first argument begin by the comment sign
   LIST(GET CMD_ARG_LIST 0 EXE_NAME)
-  STRING(REGEX MATCH "^#" IGNORE_LINE_FOUND ${EXE_NAME})
- 
-  IF(IGNORE_LINE_FOUND) 
+  
+  IF(EXE_NAME)
+    STRING(REGEX MATCH "^#" IGNORE_LINE_FOUND ${EXE_NAME})
+  ENDIF(EXE_NAME)
+
+  IF(IGNORE_LINE_FOUND OR NOT EXE_NAME) 
     
     #MESSAGE( STATUS "Current line is ignored: ${OPJ_TEST_CMD_LINE}")
    
-  ELSE(IGNORE_LINE_FOUND)
+  ELSE(IGNORE_LINE_FOUND OR NOT EXE_NAME)
   
     # Check if the first argument begin by the failed sign
     SET(FAILED_TEST_FOUND 0)
@@ -330,7 +333,7 @@ FOREACH(OPJ_TEST_CMD_LINE ${OPJ_TEST_CMD_LINE_LIST})
   
     ENDIF(ENC_TEST_FOUND)
    
-  ENDIF(IGNORE_LINE_FOUND)
+  ENDIF(IGNORE_LINE_FOUND OR NOT EXE_NAME)
 
 ENDFOREACH(OPJ_TEST_CMD_LINE)
 
